Fixed bug whereby the loading animation was overlapping elements on the page, when not active

--- a/app/src/sass/_loading.scss
+++ b/app/src/sass/_loading.scss
@@ -38,11 +38,12 @@
     left: 50%;
     margin-top: -20px;
     margin-left: -20px;
-    z-index:1037;
+    z-index:-1;
     @include opacity(0);
 
     &.active
     {
+        z-index:1037;
         @include opacity(1);
     }
 }
